--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
-
 {
   "name": "bonhoeffer-scm-dashboard-importmap",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "echo \"Build Script for Vercel: This script does not produce an output directory. For Vercel deployment to succeed, ENSURE 'Output Directory' in Vercel Project Settings > Build & Development Settings is LEFT BLANK (or set to root). Also, index.tsx MUST be transpiled to index.js and placed in the root.\"",
-    "vercel-build": "echo \"Vercel Build Info: Using import maps. index.tsx MUST be manually transpiled to index.js and placed in the root. In Vercel Project Settings > Build & Development Settings, 'Output Directory' should be BLANK to serve from root.\""
+    "build": "echo 'Starting Bonhoeffer SCM Dashboard build...' && mkdir -p build_output && npx esbuild index.tsx --bundle --outfile=build_output/index.js --format=esm --jsx=react-jsx --platform=browser --loader:.ts=tsx && cp index.html build_output/index.html && echo 'Build finished. Output in build_output directory.'",
+    "vercel-build": "npm run build"
+  },
+  "devDependencies": {
+    "esbuild": "^0.20.2"
   }
 }
+
