--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "echo 'Starting Bonhoeffer SCM Dashboard build...' && mkdir -p build_output && npx esbuild index.tsx --bundle --outfile=build_output/index.js --format=esm --jsx=react-jsx --platform=browser --loader:.ts=tsx && cp index.html build_output/index.html && echo 'Build finished. Output in build_output directory.'",
+    "build": "echo 'Starting Bonhoeffer SCM Dashboard build...' && mkdir -p build_output && npx esbuild index.tsx --bundle --outfile=build_output/index.js --format=esm --jsx=automatic --platform=browser --loader:.ts=tsx && cp index.html build_output/index.html && echo 'Build finished. Output in build_output directory.'",
     "vercel-build": "npm run build"
   },
   "devDependencies": {
